apps/bazarr/deployment-bazarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bazarr
  name: bazarr
  namespace: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
        - image: linuxserver/bazarr:1.6.2
          name: bazarr
          resources: {}
          ports:
            - containerPort: 6767
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: bazarr
            - mountPath: /data
              name: library
      restartPolicy: Always
      volumes:
        - name: library
          persistentVolumeClaim:
            claimName: plex-library
        - name: bazarr
          persistentVolumeClaim:
            claimName: bazarr
