apps/bazarr/service-bazarr.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bazarr
  name: bazarr
spec:
  ports:
    - name: "6767"
      port: 6767
      targetPort: 6767
  selector:
    app: bazarr
