apps/bazarr/ingress-bazarr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr
  namespace: plex
spec:
  ingressClassName: cilium
  rules:
  - host: bazarr.almothana.xyz
    http:
      paths:
      - backend:
          service:
            name: bazarr
            port:
              number: 6767
        path: /
        pathType: ImplementationSpecific
  tls:
    - hosts:
        - bazarr.almothana.xyz
      secretName: almothana-xyz-tls
